# tapeware

./: CHANGELOG.md  CONTRIBUTORS.md  README.md  pyproject.toml
src/tapeware/: __init__.py  __main__.py  turing_machine.py
src/tapeware/examples/: anbn.py  anbncn.py  anbncn_alt.py  end_ab.py  equal_01.py
src/tm/: __init__.py  __main__.py  turing_machine.py
src/tm/examples/: anbncn.py  end_ab.py  equal_01.py
tests/: test_anbn.py  test_anbncn.py  test_anbncn_alt.py  test_end_ab.py  test_equal_01.py
