[project]
name = "tapeware"
version = "1.4.0"
description = "A Turing machine simulator - keeps your computations fresh!"
readme = "README.md"
license = { text = "MPL-2.0" }
authors = [
    { name = "Ruben Bär", email = "polar@bear.sh" }
]
requires-python = ">=3.13"
dependencies = [
    "termcolor>=3.3.0",
    "typer>=0.23.1",
]

[project.scripts]
tapeware = "tapeware.__main__:app"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[tool.ruff]
line-length = 120
